docs/1.7.0b14/_sources/class/cfdm.Domain.rst.txt
.. currentmodule:: cfdm
.. default-role:: obj

cfdm.Domain
===========

----

.. autoclass:: cfdm.Domain
   :no-members:
   :no-inherited-members:

.. rubric:: Methods

Inspection
----------

.. rubric:: Methods
	    
.. autosummary::
   :nosignatures:
   :toctree: ../method/
   :template: method.rst

   ~cfdm.Domain.dump

Metadata constructs
-------------------

.. rubric:: Methods
	    
.. autosummary::
   :nosignatures:
   :toctree: ../method/
   :template: method.rst

   ~cfdm.Domain.auxiliary_coordinates
   ~cfdm.Domain.cell_measures
   ~cfdm.Domain.coordinates
   ~cfdm.Domain.coordinate_references
   ~cfdm.Domain.dimension_coordinates
   ~cfdm.Domain.domain_ancillaries
   ~cfdm.Domain.domain_axes
   ~cfdm.Domain.constructs
   ~cfdm.Domain.del_construct
   ~cfdm.Domain.get_construct
   ~cfdm.Domain.has_construct
   ~cfdm.Domain.set_construct
   ~cfdm.Domain.get_construct_key
   ~cfdm.Domain.constructs_data_axes
   ~cfdm.Domain.get_construct_data_axes
   ~cfdm.Domain.set_construct_data_axes

Miscellaneous
-------------

.. rubric:: Methods
	    
.. autosummary::
   :nosignatures:
   :toctree: ../method/
   :template: method.rst

   ~cfdm.Domain.copy
   ~cfdm.Domain.equals
   ~cfdm.Domain.fromconstructs

Special
-------

.. rubric:: Methods

.. autosummary::
   :nosignatures:
   :toctree: ../method/
   :template: method.rst

   ~cfdm.Domain.__deepcopy__
   ~cfdm.Domain.__repr__
   ~cfdm.Domain.__str__

