docs/1.7.1/_sources/class/cfdm.Domain.rst.txt
.. currentmodule:: cfdm
.. default-role:: obj

cfdm.Domain
===========

----

.. autoclass:: cfdm.Domain
   :no-members:
   :no-inherited-members:

.. rubric:: Methods

Inspection
----------

.. rubric:: Methods
	    
.. autosummary::
   :nosignatures:
   :toctree: ../method/
   :template: method.rst

   ~cfdm.Domain.dump

Metadata constructs
-------------------

.. rubric:: Methods
	    
.. autosummary::
   :nosignatures:
   :toctree: ../method/
   :template: method.rst

   ~cfdm.Domain.construct
   ~cfdm.Domain.construct_key
   ~cfdm.Domain.del_construct
   ~cfdm.Domain.get_construct
   ~cfdm.Domain.has_construct
   ~cfdm.Domain.set_construct
   ~cfdm.Domain.del_data_axes
   ~cfdm.Domain.get_data_axes
   ~cfdm.Domain.has_data_axes
   ~cfdm.Domain.set_data_axes

.. rubric:: Attributes
   
.. autosummary::
   :nosignatures:
   :toctree: ../attribute/
   :template: attribute.rst

   ~cfdm.Domain.constructs
   ~cfdm.Domain.auxiliary_coordinates
   ~cfdm.Domain.cell_measures
   ~cfdm.Domain.coordinates
   ~cfdm.Domain.coordinate_references
   ~cfdm.Domain.dimension_coordinates
   ~cfdm.Domain.domain_ancillaries
   ~cfdm.Domain.domain_axes

Miscellaneous
-------------

.. rubric:: Methods
	    
.. autosummary::
   :nosignatures:
   :toctree: ../method/
   :template: method.rst

   ~cfdm.Domain.copy
   ~cfdm.Domain.equals
   ~cfdm.Domain.fromconstructs

Special
-------

.. rubric:: Methods

.. autosummary::
   :nosignatures:
   :toctree: ../method/
   :template: method.rst

   ~cfdm.Domain.__deepcopy__
   ~cfdm.Domain.__repr__
   ~cfdm.Domain.__str__

